--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f3ed3524-f75d-48fe-8a08-0fd04e2e5d02",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "d0a645e7-1ce1-4b46-b665-5b0da2ccccc4",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "50592e76-1fbd-4270-8573-4d80481f4711",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
     "\n",
     "# run test search for a document specified by title and abstract text\n",
     "function test(title, text; search::Function, N, pq, model = \"word2vec\")\n",
-    "    ts = @elapsed results = search(title * \"\\n\" * text, N, pq, model)\n",
+    "    ts = @elapsed results = search(title * \"\\n\" * text, N = N, pq = pq, model = model)\n",
     "    title = replace(title, \"\\n\" => \"\")\n",
     "    printstyled(\"\\n\" * title * \"\\n\", underline = true)\n",
     "    println(string(round(ts; digits = 4)) * \" sec.\\n\")\n",
@@ -601,9 +601,9 @@
     "    # write the dataset to Redis-command file for importing\n",
     "    output = open(\"$model.arxiv\",\"w\")\n",
     "    fembed(record, output) = write(output, \"json.set \\\"paper:\" * record.id * \"\\\" \\$ \\\"\" * escape_string(JSON3.write(record)) * \"\\\"\\n\")\n",
-    "    fembed.(redset, output)\n",
+    "    fembed.(data, output)\n",
     "\n",
-    "    dimensions = 300 # !!!!!!!\n",
+    "    dimensions = 300\n",
     "    \n",
     "    # plus command to create index\n",
     "    write(output, \"FT.CREATE $model ON JSON PREFIX 1 \\\"paper:\\\" SCHEMA \\$.i as i NUMERIC \\$.$model as $model VECTOR HNSW 6 TYPE FLOAT32 DIM $dimensions DISTANCE_METRIC COSINE\")\n",
@@ -614,9 +614,9 @@
     "\n",
     "    # for large datasets index will be created in background, so we need to wait before using it\n",
     "    reindex() = parse(Int, Jedis.execute([\"ft.info\", model])[10])\n",
-    "    if reindex() < length(redset)\n",
+    "    if reindex() < length(data)\n",
     "        print(\"arxiv $model embeddings imported to Redis. creating index will take time, waiting... \")\n",
-    "        sleep(1); while reindex() < length(redset) sleep(4) end\n",
+    "        sleep(1); while reindex() < length(data) sleep(4) end\n",
     "        println(\"done! saving result...\")\n",
     "    end\n",
     "    \n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "0ae9cc23-bf9f-433d-b8c2-9129da2e604d",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "research (generic function with 1 method)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,13 +872,21 @@
    "id": "fb101d63-f89b-4c50-a614-a18d17656bea",
    "metadata": {},
    "source": [
-    "<h3 style = \"line-height:96px\"><img align = left width = \"256px\" style = \"min-width:33%\" src = \"https://huggingface.co/datasets/huggingface/brand-assets/resolve/main/hf-logo.svg\">HuggingFace embeddings</h3>\n",
+    "<h3 style = \"line-height:96px\"><img align = left width = \"256px\" style = \"min-width:33%;max-width:256px\" src = \"https://huggingface.co/datasets/huggingface/brand-assets/resolve/main/hf-logo.svg\">HuggingFace embeddings</h3>\n",
     "<p style = \"text-align:justify\">In this section I'm going to use <a target = _blank href = \"https://huggingface.co/spaces/mteb/leaderboard\">a model from Hugging Face</a> to generate embeddings for each document instead of word2vec. The model taken will be <b>gte-large-en-v1.5</b> since it has shown best performance on information retrieval task for scinetific datasets: SCIDOCS and SciFact, and also has one of the best performance for Englis-language retrieval task overall.</p><p></p>Unfortunately, I will have to use python call here, because current Julia support for Hugging Face models is limited (there seems to be a bug that does not allow to download every model) and Sentence Transformers are also lacking. To save time, I will use PyCall right now and work on a pure Julia implementation afterwards.</p>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68888ff8-474d-4600-a822-05aed40bfea8",
+   "metadata": {},
+   "source": [
+    "To start, we need to import the model and specify it will run on GPU device using <i>cuda</i> keyword:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "c229270c-36f7-4f9c-a8b1-84e589e8b3d7",
    "metadata": {},
    "outputs": [
@@ -891,7 +899,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,15 +916,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fb35b8a-5ebf-49f5-8307-ca4e6e3c8600",
+   "cell_type": "markdown",
+   "id": "b54b7ab9-3f3a-4d25-87ca-93787568b117",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "using CUDA\n",
-    "\n",
-    "device_reset!()"
+    "I will extract id, title and abstract fields from dataframe and prepare the for further processing:"
    ]
   },
   {
@@ -926,7 +930,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunks = NamedTuple.(eachrow(dataframe[!, [:i, :id, :title, :abstract]])) ;"
+    "data = NamedTuple.(eachrow(dataframe[!, [:i, :id, :title, :abstract]])) ;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a20401d-cfb4-49a3-967e-19908ba3c541",
+   "metadata": {},
+   "source": [
+    "Next I will calculate vector embeddings using gte-large-en-v1.5 model for each document in the dataset, and save the results to .json format file, that will be later imported into Redis:"
    ]
   },
   {
@@ -938,34 +950,27 @@
    },
    "outputs": [],
    "source": [
-    "open(\"gtelarge.arxiv\",\"w\") do output\n",
+    "open(\"arxiv-gtelarge.json\",\"w\") do output\n",
+    "    write(output, \"[\\n\")\n",
+    "    n = 0\n",
     "\n",
-    "    datale = length(chunks)\n",
-    "#    sizech = 8192 * 32 * 32 * 8\n",
-    "#    counch = Int(ceil(datale/sizech))\n",
+    "    i = 1\n",
+    "    j = length(data)\n",
+    "    \n",
+    "    chunk = [(p.title * \"\\n\" * p.abstract) for p in data[i:j]]]\n",
+    "    chunk = gtelarge.encode(chunk, batch_size = 512)\n",
     "\n",
-    "#    for i in range(1, step = sizech, length = counch)\n",
-    "#        i = Int(i)\n",
-    "#        j = i + sizech - 1\n",
-    "#        if j > datale\n",
-    "#            j = datale\n",
-    "#        end\n",
-    "\n",
-    "        chunk = [(p.title * \"\\n\" * p.abstract) for p in chunks] # for p in chunks[i:j]]\n",
-    "        chunk = gtelarge.encode(chunk, batch_size = 128)\n",
-    "\n",
-    "        for ii in 1:datale # i:j\n",
-    "            record = (i = chunks[ii].i, id = chunks[ii].id, gtelarge = chunk[ii, :]) # -i+1\n",
-    "            write(output, \"json.set \\\"paper:\" * record.id * \"\\\" \\$ \\\"\" * escape_string(JSON3.write(record)) * \"\\\"\\n\")\n",
+    "    for ii in i:j\n",
+    "        record = (i = chunks[ii].i, id = data[ii].id, gtelarge = chunk[ii, :])\n",
+    "        if n > 0\n",
+    "            write(output, \",\\n\")\n",
     "        end\n",
-    "#\n",
+    "        write(output, JSON3.write(record))\n",
+    "        n = n + 1\n",
     "    end\n",
     "\n",
-    "    write(output, \"FT.CREATE gtelarge ON JSON PREFIX 1 \\\"paper:\\\" SCHEMA \\$.i as i NUMERIC \\$.gtelarge as gtelarge VECTOR HNSW 6 TYPE FLOAT32 DIM 1024 DISTANCE_METRIC COSINE\")\n",
-    "\n",
-    "end\n",
-    "\n",
-    "#close(output)"
+    "    write(output, \"\\n]\\n\")\n",
+    "end"
    ]
   },
   {
@@ -973,37 +978,125 @@
    "id": "415f7052-af32-4df1-a5fa-5785a85ff40e",
    "metadata": {},
    "source": [
-    "Now I will save the embeddings and import them into Redis only, to avoid unneccessary memory consumption by Postgres index, since onlty Redis indexing will be used for performance:"
+    "Now I will import the embeddings into Redis only, to avoid unneccessary memory consumption by Postgres index, since onlty Redis indexing will be used for performance:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b2488df-2fd8-49cb-b177-4bb844d67e56",
+   "id": "57c7da11-f779-4141-9f78-0d56b486c616",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check dimensions\n",
-    "# save and import to Redis no Postgres\n",
-    "\n",
-    "gteset = NamedTuple.(eachrow(dataframe[!, :i, :id, :gtelarge])) ;\n",
-    "\n",
-    "embed2red(gteset, gtelarge)"
+    "Base.run(`riot file-import arxiv-gtelarge.json json.set --keyspace embeddings:gtelarge --keys id`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39b064ec-1bdb-44e7-993a-b7271dfaabfe",
+   "metadata": {},
+   "source": [
+    "After importing the data, we need to create a vector index for gte-large embeddings in Redis and save the database:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b28e9fd-1b4c-49fc-bdfe-f15e622b25e1",
+   "id": "40e75ff7-479d-4b3e-94c5-f20c2970bf25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vec4gtelarge(query) = gtelarge.encode(query)\n",
-    "    \n",
-    "N_test = 2\n",
-    "subset = dataframe[shuffle(1:nrow(dataframe))[1:N_test], :]\n",
+    "newindex = \"FT.CREATE gtelarge ON JSON PREFIX 1 \\\"embeddings:gtelarge:\\\" SCHEMA \\$.i as i NUMERIC \\$.gtelarge as gtelarge VECTOR HNSW 6 TYPE FLOAT32 DIM 1024 DISTANCE_METRIC COSINE\"\n",
+    "Base.run(pipeline(newindex, `redis-cli`))\n",
     "\n",
-    "test.(subset[!, :title], subset[!, :abstract], search = research, N = 4, pq = pq, model = \"gtelarge\") ;"
+    "reindex() = parse(Int, Jedis.execute([\"ft.info\", \"gtelarge\"])[10])\n",
+    "while reindex() < length(data)\n",
+    "    sleep(1)\n",
+    "end\n",
+    "\n",
+    "Jedis.execute([\"save\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ae00ed-d4e4-462d-964d-ba22aecbb90d",
+   "metadata": {},
+   "source": [
+    "Done! We are now ready to test how search with embeddings calculated by gte-large-en model will be different from word2vec, by searching the keyphrase:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be2955e-6d79-4894-9a15-4611c7453c00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this function will be called to get vector embedding for the model\n",
+    "vec4gtelarge(query) = gtelarge.encode(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "09129212-66c4-4d35-982e-435668596d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "input the search query:  articles about Big Bang theory\n",
+      "number of search results to display:  32\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[0m\u001b[4marticles about Big Bang theory\u001b[24m\n",
+      "0.0977 sec.\n",
+      "\n",
+      "(0.2872) Thoughts on Big Bang\n",
+      "(0.2916) The big-bang theory: construction, evolution and status\n",
+      "(0.2978) Cosmology Solved? Quite Possibly!\n",
+      "(0.3043) Editorial note to \"The beginning of the world from the point of view of   quantum theory\"\n",
+      "(0.306) The Case of the Curved Universe: Open, Closed, or Flat?\n",
+      "(0.3145) An analysis of the big-bang theory according to classical physics\n",
+      "(0.3169) Space Time Quantization and the Big Bang\n",
+      "(0.3171) Was There A Big Bang?\n",
+      "(0.3177) 100 Years of Relativistic Cosmology (1917-2017). Part I: From Origins to   the Discovery of Universal Expansion (1929)\n",
+      "(0.3183) What's in a Name: History and Meanings of the Term \"Big Bang\"\n",
+      "(0.32) The Rise of Big Bang Models, from Myth to Theory and Observations\n",
+      "(0.3209) Piecing together the big picture\n",
+      "(0.3243) \"All that matter ... in one Big Bang ...,\" & other cosmological   singularities\n",
+      "(0.3257) Astrophysics: A burst of new ideas\n",
+      "(0.3283) Cosmology Update 1998\n",
+      "(0.3286) Cosmology Solved? Maybe\n",
+      "(0.3309) The Inverted Big-Bang\n",
+      "(0.3324) Lemaitre's Big Bang\n",
+      "(0.3333) The violent Universe: the Big Bang\n",
+      "(0.3347) A Simple/Short Introduction to Pre-Big-Bang Physics/Cosmology\n",
+      "(0.3349) The Dark Universe\n",
+      "(0.3356) The Birth and Death of a Universe\n",
+      "(0.336) Resolution of Cosmological Singularity and a Plausible Mechanism of the   Big Bang\n",
+      "(0.3364) The Beginning and Evolution of the Universe\n",
+      "(0.3378) The Universe's Evolution\n",
+      "(0.3379) The evolution of the Universe\n",
+      "(0.3401) Historical Aspects of Post-1850 Cosmology\n",
+      "(0.3403) An Ever Expanding Universe?\n",
+      "(0.341) Cosmology with Bounce by Flat Space-Time Theory of Gravitation and a New   Interpretation\n",
+      "(0.3416) How the Big Bang Ends up Inside a Black Hole\n",
+      "(0.3425) How did it all begin?\n",
+      "(0.3425) Discovery of the Hot Big Bang: What happened in 1948\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = IJulia.readprompt(\"input the search query: \")\n",
+    "n = IJulia.readprompt(\"number of search results to display: \")\n",
+    "test.(query, \"\", search = research, N = n, pq = pq, model = \"gtelarge\") ;"
    ]
   }
  ],
